syntax = "proto3";

package proto;
option go_package = "./;bannersrotator";

service BannersRotator {
    rpc AddBannerToSlot(BannerOperationRequest) returns (BannerOperationResponse);
    rpc RemoveBannerFromSlot(BannerOperationRequest) returns (BannerOperationResponse);
}

message BannerOperationRequest {
    int64 slotId = 1;
    int64 bannerId = 2;
}

message BannerOperationResponse {
    bool success = 1;
}